--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
     --footer-color: #4b4c4d;
     --main-color: #1663A5;
 }
-
+*{
+    list-style:none;
+}
 #header a {
     text-decoration: none;
     color: black;
@@ -18,6 +20,10 @@
     font-weight: 600;
     font-size: 16px;
     width: 100%;
+    position: fixed;
+    top: 0;
+    transition: 0.5s;
+
 }
 
 #header p {
@@ -31,7 +37,6 @@ nav {
 }
 
 nav ol {
-    list-style-type: none;
     display: flex;
     margin-right: 15rem;
 }
@@ -52,6 +57,8 @@ body {
 
 main {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-top: 80px;
+
 }
 
 #header a p:hover {
@@ -82,7 +89,6 @@ footer #logo a:hover {
 }
 
 footer #nav ul {
-    list-style: none;
     display: flex;
     align-items: center;
     justify-content: center;
