--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ nav ol li {
 body {
     margin: 0;
     padding: 0;
+
 }
 
 main {
@@ -75,9 +76,12 @@ main {
 }
 
 
-#AboutMe{
+#aboutMe{
+    position: relative;
     text-align: center;
     margin-top: 50px;
+    overflow: hidden;
+
 }
 #separator {
     width: 10%;
@@ -86,9 +90,27 @@ main {
     background-color: var(--main-color);
     margin: 20px auto; 
 }
-#logoMail{
-    width: 20px;
+#cv{
+    z-index: 1;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #timeline {
     width: 80%;
@@ -218,4 +240,13 @@ footer p {
     font-size: 15px;
     color: #aaa;
     margin-bottom: 0;
+}
+#logoMail{
+    width: 20px;
+}
+
+.bubble {
+    position: absolute;
+    border-radius: 50%;
+    opacity:0.5;
 }
