--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ main {
 #aboutMe{
     position: relative;
     text-align: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     overflow: hidden;
     min-height: 95vh;
     background: url(../img/aboutMeBackground.png) no-repeat center center/cover;
@@ -108,7 +109,7 @@ main {
 }
 #languages{
     position: absolute;
-    top: 85%;
+    top: 80%;
     left:50%;
     transform: translate(-50%,-50%);
     text-align: center;
@@ -117,9 +118,17 @@ main {
     color:white;
     font-size: 1.2rem;
     font-weight: 600;
+    margin-top: 0;
+    
+}
+#languages #info{
+    color: #404040;;
+    font-size: 0.7rem;
+    font-weight: 400;
 }
 #languages ul{
     display:flex;
+    margin-bottom: 0;
 }
 #languages ul li{
     margin: auto;
@@ -130,6 +139,11 @@ main {
 
 
 
+/* Project */
+#projects{
+    text-align: center;
+    padding: 20px;
+}
 
 
 
@@ -145,7 +159,7 @@ main {
 
 
 
-
+/* Timeline */
 
 #timeline {
     width: 80%;
